--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,7 @@ dkms.conf
 /Firmware/MOD-I2C-GPIO.X/dist/XC8_PIC16LF18324/
 /Firmware/MOD-I2C-GPIO-BL.X/build/XC8_PIC16LF18324/
 /Firmware/MOD-I2C-GPIO-BL.X/dist/XC8_PIC16LF18324/
+/Firmware/MOD-I2C-GPIO.X/dist/XC8_PIC16LF18324_SIM/
+/Firmware/MOD-I2C-GPIO.X/build/XC8_PIC16LF18324_SIM/
+/Firmware/MOD-I2C-GPIO.X/build/XC8_PIC16LF18324_NO_BOOT/
+/Firmware/MOD-I2C-GPIO.X/dist/XC8_PIC16LF18324_NO_BOOT/
